protect the forge sectoid team.

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -1279,7 +1279,7 @@
 						ForceSpawnTemplateNames[0]="LWDroneM2",\\
 						ForceSpawnTemplateNames[1]="LWDroneM1")
 
-+ConfigurableEncounters=(EncounterID="FORGE_SECTOID_TEAM", \\
++ConfigurableEncounters=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", \\
 						MaxSpawnCount=5, \\
 						MinRequiredForceLevel=1, \\
 						MaxRequiredForceLevel=20, \\
