--- a/LongWarOfTheChosen/Config/XComSchedules.ini
+++ b/LongWarOfTheChosen/Config/XComSchedules.ini
@@ -14008,7 +14008,7 @@
 				  PrePlacedEncounters[4]=(EncounterID="OPNx4_WithTerror_LW", EncounterZoneOffsetAlongLOP=18.0, EncounterZoneWidth=45.0), \\
 				  PrePlacedEncounters[5]=(EncounterID="LIST_OPNx3_Special", EncounterZoneOffsetAlongLOP=11.0, EncounterZoneWidth=18.0), \\
 				  PrePlacedEncounters[6]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=52.0, EncounterZoneWidth=14.0), \\
-				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
+				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[9]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14030,7 +14030,7 @@
 				  PrePlacedEncounters[4]=(EncounterID="GP_Forge_BossGroup_Easy", EncounterZoneOffsetAlongLOP=25.0, EncounterZoneWidth=9.0, EncounterZoneDepthOverride=4.0), \\
 				  PrePlacedEncounters[5]=(EncounterID="ALNx5_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=11.0, EncounterZoneWidth=18.0), \\
 				  PrePlacedEncounters[6]=(EncounterID="OPNx5_WithTerror_LW", EncounterZoneOffsetAlongLOP=-2.0, EncounterZoneWidth=14.0), \\
-				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
+				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[9]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14052,7 +14052,7 @@
 				  PrePlacedEncounters[4]=(EncounterID="LIST_OPNx3_Special", EncounterZoneOffsetAlongLOP=11.0, EncounterZoneWidth=18.0), \\
 				  PrePlacedEncounters[5]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=-2.0, EncounterZoneWidth=40.0), \\
 				  PrePlacedEncounters[6]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=18.0, EncounterZoneWidth=45.0), \\
-				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM",		EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=50.0), \\
+				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED",		EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=50.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[9]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14074,7 +14074,7 @@
 				  PrePlacedEncounters[4]=(EncounterID="OPNx5_WithTerror_LW", EncounterZoneOffsetAlongLOP=11.0, EncounterZoneWidth=45.0), \\
 				  PrePlacedEncounters[5]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=-2.0, EncounterZoneWidth=35.0), \\
 				  PrePlacedEncounters[6]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=18.0, EncounterZoneWidth=45.0), \\
-				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=40.0), \\
+				  PrePlacedEncounters[7]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=40.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[9]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14098,7 +14098,7 @@
 				  PrePlacedEncounters[6]=(EncounterID="ALNx5_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=-2.0, EncounterZoneWidth=14.0), \\
 				  PrePlacedEncounters[7]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=14.0, EncounterZoneWidth=4.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=-14.0, EncounterZoneWidth=4.0), \\
-				  PrePlacedEncounters[9]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
+				  PrePlacedEncounters[9]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[11]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[12]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14122,7 +14122,7 @@
 				  PrePlacedEncounters[6]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=14.0, EncounterZoneWidth=4.0, EncounterZoneDepthOverride=40.0), \\
 				  PrePlacedEncounters[7]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=0.0, EncounterZoneWidth=4.0, EncounterZoneDepthOverride=40.0), \\
 				  PrePlacedEncounters[8]=(EncounterID="ALNx4_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=30.0, EncounterZoneOffsetFromLOP=-14.0, EncounterZoneWidth=4.0, EncounterZoneDepthOverride=40.0), \\
-				  PrePlacedEncounters[9]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
+				  PrePlacedEncounters[9]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[11]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[12]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
@@ -14145,7 +14145,7 @@
 				  PrePlacedEncounters[5]=(EncounterID="LIST_OPNx4_Special", EncounterZoneOffsetAlongLOP=-2.0, EncounterZoneWidth=14.0), \\
 				  PrePlacedEncounters[6]=(EncounterID="OPNx7_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=14.0, EncounterZoneWidth=4.0, EncounterZoneDepthOverride=40.0), \\
 				  PrePlacedEncounters[7]=(EncounterID="ALNx5_Bucket_Standard_LW", EncounterZoneOffsetAlongLOP=20.0, EncounterZoneOffsetFromLOP=-14.0, EncounterZoneWidth=4.0, EncounterZoneDepthOverride=40.0), \\
-				  PrePlacedEncounters[8]=(EncounterID="FORGE_SECTOID_TEAM", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
+				  PrePlacedEncounters[8]=(EncounterID="FORGE_SECTOID_TEAM_PROTECTED", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=28.0), \\
 				  PrePlacedEncounters[9]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=-10.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[10]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=5.0,	EncounterZoneOffsetFromLOP=20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
 				  PrePlacedEncounters[11]=(EncounterID="Lone_Drone_LW",			EncounterZoneOffsetAlongLOP=20.0,	EncounterZoneOffsetFromLOP=-20.0,	EncounterZoneWidth=45.0, EncounterZoneDepthOverride=30.0), \\
