Chryssalid Soldier / Hive Queen tweaks
*swap them to custom slash abilities so their damage shows up correctly in F1/unit flags and the chryssalid poison damage isn't boosted too.
* boost crit chance (scales with difficulty) so they are much more difficult to combatives tank and actually a threat.

(Future plan is give the Hive Queen an AOE slash similar to Faceless)

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -540,6 +540,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 -EquivalentAbilities=( KeyName=StandardShot, EquivalentAbilityName[0]=PistolStandardShot, EquivalentAbilityName[1]=AnimaGate, EquivalentAbilityName[2]=BlasterDuringCannon, EquivalentAbilityName[3]=StandardShot_NoEnd, EquivalentAbilityName[4]=Blaster, EquivalentAbilityName[5]=SniperStandardFire)
 +EquivalentAbilities=( KeyName=StandardShot, EquivalentAbilityName[0]=AnimaGate, EquivalentAbilityName[1]=BlasterDuringCannon, EquivalentAbilityName[2]=StandardShot_NoEnd, EquivalentAbilityName[3]=Blaster, EquivalentAbilityName[4]=SniperStandardFire, EquivalentAbilityName[5]=LightEmUp, EquivalentAbilityName[6]=PistolStandardShot)
 
++EquivalentAbilities=(KeyName=StandardMelee, EquivalentAbilityName[0]=ChryssalidSoldierSlash, EquivalentAbilityName[1]=HiveQueenSlash)
+
 +CustomNodes=(NodeTypeString="LWAction", ExtendsFromType="Action", ClassName="LW_Overhaul.X2AIBehavior_LW")
 ; +CustomNodes=(NodeTypeString="DLC3Action", ExtendsFromType="Action", ClassName="DLC_3.X2AIBT_DLC_90Actions")
 
