--- a/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
+++ b/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
@@ -106,6 +106,9 @@ MASS_MINDSPIN_TILES_RADIUS=5
 CHRYSSALID_SOLDIER_SLASH_BONUS_DAMAGE=2
 HIVE_QUEEN_SLASH_BONUS_DAMAGE=6
 
+CHRYSSALID_SOLDIER_MELEEATTACK_BASEDAMAGE = (Damage=8, Spread = 1, PlusOne = 50,	Crit = 3, Pierce = 0, Shred=0, Tag = "", DamageType="Melee")
+HIVEQUEEN_MELEEATTACK_BASEDAMAGE = (Damage=10, Spread = 1, PlusOne = 50,	Crit = 3, Pierce = 0, Shred=0, Tag = "", DamageType="Melee")
+
 REPAIR_SERVOS_BONUS_ARMOR = 2
 REPAIR_SERVOS_DURATION = 2
 
