Disable the Bypass Door Lock hack that randomly shows up

--- a/LongWarOfTheChosen/Config/XComGameCore.ini
+++ b/LongWarOfTheChosen/Config/XComGameCore.ini
@@ -2206,6 +2206,11 @@ LinkedReward=None
 bPairWithLinkedReward=false
 bIsStrategyReward=true
 
+;disable
+[ObjectiveDoor_T1_Secure X2HackRewardTemplate]
+bIsTier1Reward=false
+bIsTier2Reward=false
+
 ; Disable, instead make it an accessible 2nd tier
 [EnemyProtocol_T1 X2HackRewardTemplate]
 RewardImagePath=img:///UILibrary_Common.HackReward_EnemyProtocol
