disable the Templar auto respec
it's been a year, it's not needed.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -55,7 +55,7 @@ DLCIdentifier="LongWarOfTheChosen"
 
 ; switch this to True if you want shield templars still (you'll still need to config them yourself)
 ; this turns off the auto-respec if a Templar doesn't have the new psi shield yet.
-bDisableRespeccingTemplars = false
+bDisableRespeccingTemplars = true
 
 ; this setting consoldiates Sewer maps into Subway category so sewer maps can be added, but don't spam the map generation with their own category.
 bSewersToSubway=true
