correct homing mine config
it was set to primary weapon which caused it to break animations

--- a/LongWarOfTheChosen/Config/XComClassData.ini
+++ b/LongWarOfTheChosen/Config/XComClassData.ini
@@ -2610,7 +2610,7 @@ bHasClassMovie=true
 ; MSGT 
 +SoldierRanks=(AbilitySlots=((AbilityType=(AbilityName="TheBanisher_LW", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
 							(AbilityType=(AbilityName="RendTheMarked", ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
-							(AbilityType=(AbilityName="HomingMine",			ApplyToWeaponSlot=eInvSlot_PrimaryWeapon)), \\
+							(AbilityType=(AbilityName="HomingMine"\)), \\
 							(RandomDeckName="Rank7_XComAbilities"), \\
 							(AbilityType=(AbilityName="FanFire",		ApplyToWeaponSlot=eInvSlot_Pistol))), \\
 			  aStatProgression=((StatType=eStat_Offense,StatAmount=1), (StatType=eStat_Hacking,StatAmount=5)))
