Add Prototype Armory to incompatible mods

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -146,6 +146,7 @@ DisplayName="Long War of the Chosen"
 +IncompatibleMods="LongWar2"
 +IncompatibleMods="[WOTC]EditedRagdollPhysicsandEffects"
 +IncompatibleMods="StormEagleReplacer"
++IncompatibleMods="PrototypeArmoury"
 
 +RequiredMods="X2WOTCCommunityHighlander"
 +RequiredMods="robojumperSquadSelect_WotC"
