Updated crate race/smash n grab rewards
re-scaling stuff based on LW2 values.  Crate races didn't give enough alloys early, too much elerium early, and not enough of either lategame, relative to smash n grabs.  S&G gave too much early because I did some anti-RNG wrong, so correcting that.

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -1359,31 +1359,44 @@ TIER3_STRIKE_DMG=(Damage=12, Spread=0, PlusOne=0, Crit=6, Pierce=0, Shred=0, Tag
 +ChestDistributions=(MinForceLevel=1,\\
 					MaxForceLevel=4,\\
 					ChestTypeShuffleBag[0]="Basic1", \\
+					RareChests[0]=(Type="Rare1", Chance=1.0), \\
 					)
 
 +ChestDistributions=(MinForceLevel=5,\\
 					MaxForceLevel=8,\\
 					ChestTypeShuffleBag[0]="Basic2", \\
+					RareChests[0]=(Type="Rare2", Chance=1.0), \\
 					)
 
 +ChestDistributions=(MinForceLevel=9,\\
 					MaxForceLevel=11,\\
 					ChestTypeShuffleBag[0]="Basic3", \\
+					RareChests[0]=(Type="Rare3", Chance=1.0), \\
 					)
 
 +ChestDistributions=(MinForceLevel=12,\\
 					MaxForceLevel=15,\\
 					ChestTypeShuffleBag[0]="Basic4", \\
+					RareChests[0]=(Type="Rare4", Chance=1.0), \\
 					)
 
 +ChestDistributions=(MinForceLevel=16,\\
 					MaxForceLevel=99,\\
 					ChestTypeShuffleBag[0]="Basic5", \\
+					RareChests[0]=(Type="Rare5", Chance=1.0), \\
 					)
 
 
 +ChestDefinitions=(Type="Basic4", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_Basic4")
 +ChestDefinitions=(Type="Basic5", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_Basic5")
+
+; "Rare" ones with chance for datapad/core
+
++ChestDefinitions=(Type="Rare1", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_RareBasic1")
++ChestDefinitions=(Type="Rare2", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_RareBasic2")
++ChestDefinitions=(Type="Rare3", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_RareBasic3")
++ChestDefinitions=(Type="Rare4", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_RareBasic4")
++ChestDefinitions=(Type="Rare5", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_RareBasic5")
 
 ; The ones for the Big Supply Extract need to be here as well so rewards get given after the mission
 +ChestDefinitions=(Type="BigBasic1", 		ArchetypePath="MissionAssets_SupplyExtraction.Archetypes.ARC_IA_SupplyCrate_Standard", LootTable="SupplyExtraction_BigBasic1")
