Clean up some logging
also a few compiler "unused variable warnings.

--- a/LongWarOfTheChosen/Config/XComGameCore.ini
+++ b/LongWarOfTheChosen/Config/XComGameCore.ini
@@ -2296,7 +2296,7 @@ Chance=100
 +RadiusManagerMissionTypes="Invasion_LW"
 +RadiusManagerMissionTypes="Defend_LW"
 EnableLWTrace=true
-EnableLWDebug=true
+EnableLWDebug=false
 EnableLWPMTrace=true
 
 ;This one is specifically for LW's pod diversity system.  Turn on only for debugging, will generate significant lag whenver encounters are generated.
