comment update to clarify unused setting

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -4,7 +4,7 @@
 ; by this many hours
 AVATAR_DELAY_HOURS_PER_NET_GLOBAL_VIG=10
 
-; Infiltration percentage that disables negative sitreps
+; Infiltration percentage that disables negative sitreps (currently unused)
 INFILTRATION_TO_DISABLE_SIT_REPS=1.25
 
 CHOSEN_APPEARANCE_ALERT_MOD = -3
