Add some enemies to FL 4/5 alien pods for variety

--- a/LongWarOfTheChosen/Config/XComEncounterLists.ini
+++ b/LongWarOfTheChosen/Config/XComEncounterLists.ini
@@ -1779,6 +1779,11 @@
 	SpawnDistribution[5]=(Template="AdvPriestM1", MinForceLevel=10, MaxForceLevel=10, MaxCharactersPerGroup=1, SpawnWeight=2), \\
 	SpawnDistribution[6]=(Template="AdvPriestM1", MinForceLevel=11, MaxForceLevel=11, MaxCharactersPerGroup=1, SpawnWeight=1))
 
+; Added for early game Alien pods to not be all Vipers/Sectoids
++SpawnDistributionLists=(ListID="AlienFollowers_LW", \\
+	SpawnDistribution[0]=(Template="AdvPriestM1", MinForceLevel=4, MaxForceLevel=4, MaxCharactersPerGroup=1, SpawnWeight=2), \\
+	SpawnDistribution[1]=(Template="AdvPriestM1", MinForceLevel=5, MaxForceLevel=5, MaxCharactersPerGroup=1, SpawnWeight=2))
+
 +SpawnDistributionLists=(ListID="NoTerror_LW", \\
 	SpawnDistribution[0]=(Template="AdvPriestM1", MinForceLevel=5, MaxForceLevel=5, MaxCharactersPerGroup=1, SpawnWeight=1), \\
 	SpawnDistribution[1]=(Template="AdvPriestM1", MinForceLevel=6, MaxForceLevel=6, MaxCharactersPerGroup=1, SpawnWeight=2), \\
@@ -2127,6 +2132,11 @@
 	SpawnDistribution[8]=(Template="AdvPurifierM1", MinForceLevel=12, MaxForceLevel=12, MaxCharactersPerGroup=2, SpawnWeight=1), \\
 	SpawnDistribution[9]=(Template="AdvPurifierM1", MinForceLevel=13, MaxForceLevel=13, MaxCharactersPerGroup=2, SpawnWeight=1), \\
 	SpawnDistribution[10]=(Template="AdvPurifierM1", MinForceLevel=14, MaxForceLevel=14, MaxCharactersPerGroup=2, SpawnWeight=1))
+
+; Added for early game Alien pods to not be all Vipers/Sectoids
++SpawnDistributionLists=(ListID="AlienFollowers_LW", \\
+	SpawnDistribution[0]=(Template="AdvPurifierM1", MinForceLevel=4, MaxForceLevel=4, MaxCharactersPerGroup=1, SpawnWeight=2), \\
+	SpawnDistribution[1]=(Template="AdvPurifierM1", MinForceLevel=5, MaxForceLevel=5, MaxCharactersPerGroup=1, SpawnWeight=2))
 
 +SpawnDistributionLists=(ListID="NoTerror_LW", \\
 	SpawnDistribution[0]=(Template="AdvPurifierM1", MinForceLevel=4, MaxForceLevel=4, MaxCharactersPerGroup=2, SpawnWeight=1), \\
@@ -3651,6 +3661,11 @@
 	SpawnDistribution[9]=(Template="AdvStunLancerM1", MinForceLevel=12, MaxForceLevel=12, MaxCharactersPerGroup=2, SpawnWeight=1), \\
 	SpawnDistribution[10]=(Template="AdvStunLancerM1", MinForceLevel=13, MaxForceLevel=13, MaxCharactersPerGroup=2, SpawnWeight=1), \\
 	SpawnDistribution[11]=(Template="AdvStunLancerM1", MinForceLevel=14, MaxForceLevel=14, MaxCharactersPerGroup=2, SpawnWeight=1))
+
+; Added for early game Alien pods to not be all Vipers/Sectoids
++SpawnDistributionLists=(ListID="AlienFollowers_LW", \\
+	SpawnDistribution[0]=(Template="AdvStunLancerM1", MinForceLevel=4, MaxForceLevel=4, MaxCharactersPerGroup=1, SpawnWeight=2), \\
+	SpawnDistribution[1]=(Template="AdvStunLancerM1", MinForceLevel=5, MaxForceLevel=5, MaxCharactersPerGroup=1, SpawnWeight=2))
 
 ; This gets combined with LW's stuff for the diversity system to increase MPCG count.  Weight gets merged so these are "normal"
 +SpawnDistributionLists=(ListID="SavageFollowers", \\
