Update Anatomy to better implementation from Merist

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -712,6 +712,9 @@ FocusedDefenseDodge = 20
 +LICK_YOUR_WOUNDS_ALLOWED_ABILITIES = "HunkerDown"
 +LICK_YOUR_WOUNDS_ALLOWED_ABILITIES = "ShieldWall" 
 
+ANATOMY_CRIT = 15
+ANATOMY_ARMOR_PIERCE = 2
+
 [LW_PerkPack_Integrated.X2Effect_HitandRun]
 +HNR_ABILITYNAMES=StandardShot
 +HNR_ABILITYNAMES=LightEmUp
