Fix GP mission families in LW UI config
also the base game jobs since WOTC split the golden path.

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -601,7 +601,7 @@ BUSY_HAVENS_SLOW_VIGILANCE_DECAY=TRUE
 
 ;;   Golden Path Mission Settings
 
-+MissionSettings=(MissionOrFamilyName="GP_Blacksite_LW", \\
++MissionSettings=(MissionOrFamilyName="GoldenPath1_LW", \\
               AlertName="", \\
               MissionSound="GeoscapeFanfares_GoldenPath", \\
               EventTrigger="", \\
@@ -611,7 +611,7 @@ BUSY_HAVENS_SLOW_VIGILANCE_DECAY=TRUE
               MissionImagePath="img:///UILibrary_StrategyImages.X2StrategyMap.Alert_Blacksite" \\
             )
 
-+MissionSettings=(MissionOrFamilyName="GP_Forge_LW", \\
++MissionSettings=(MissionOrFamilyName="GoldenPath2_LW", \\
               AlertName="", \\
               MissionSound="GeoscapeFanfares_GoldenPath", \\
               EventTrigger="", \\
@@ -621,7 +621,7 @@ BUSY_HAVENS_SLOW_VIGILANCE_DECAY=TRUE
               MissionImagePath="img:///UILibrary_StrategyImages.X2StrategyMap.Alert_Forged" \\
             )
 
-+MissionSettings=(MissionOrFamilyName="GP_PsiGate_LW", \\
++MissionSettings=(MissionOrFamilyName="GoldenPath3_LW", \\
               AlertName="", \\
               MissionSound="GeoscapeFanfares_GoldenPath", \\
               EventTrigger="", \\
@@ -631,7 +631,7 @@ BUSY_HAVENS_SLOW_VIGILANCE_DECAY=TRUE
               MissionImagePath="img:///UILibrary_StrategyImages.X2StrategyMap.Alert_PsiGate" \\
             )
 
-+MissionSettings=(MissionOrFamilyName="GP_Broadcast_LW", \\
++MissionSettings=(MissionOrFamilyName="GoldenPath4_LW", \\
               AlertName="", \\
               MissionSound="GeoscapeFanfares_GoldenPath", \\
               EventTrigger="", \\
@@ -641,7 +641,7 @@ BUSY_HAVENS_SLOW_VIGILANCE_DECAY=TRUE
               MissionImagePath="img:///UILibrary_StrategyImages.X2StrategyMap.Alert_Sky_Tower" \\
             )
 
-+MissionSettings=(MissionOrFamilyName="GP_Fortress_LW", \\
++MissionSettings=(MissionOrFamilyName="GoldenPath5_LW", \\
               AlertName="", \\
               MissionSound="GeoscapeFanfares_GoldenPath", \\
               EventTrigger="", \\
