better handling for Phosphorus and SharpshooterAim effects
open them up to config OPTC with improved versions or just not hardcoded things.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1203,3 +1203,12 @@ SHIELD_BASH_COOLDOWN=3
 GREATER_PADDING_CV=1
 GREATER_PADDING_MG=2
 GREATER_PADDING_BM=4
+
+[LW_Overhaul.OPTC_SharpshooterAim]
++Aim_AllowedAbilities = HunkerDown
+
+; This will OPTC other modded flamethrower things to add Phosphorus support to them.
+; LW Gauntlets and Purifier flamethrower is already handled separately
+[LW_Overhaul.OPTC_Phosphorus]
+
+; +PhosphorusAbilities = YourAbilityHere
