mark Weapon Item Overhaul as incompatible

--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -147,6 +147,7 @@ DisplayName="Long War of the Chosen"
 +IncompatibleMods="[WOTC]EditedRagdollPhysicsandEffects"
 +IncompatibleMods="StormEagleReplacer"
 +IncompatibleMods="PrototypeArmoury"
++IncompatibleMods="WOTC_APA_WeaponItemOverhaul"
 
 +RequiredMods="X2WOTCCommunityHighlander"
 +RequiredMods="robojumperSquadSelect_WotC"
