--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -371,9 +371,9 @@ ROLL_ADITIONAL_SITREPS_WITH_SPECIAL_SITREP=false
 ; +MISSION_TYPE_SIT_REP_EXCLUSIONS=(MissionType="Rendezvous_LW", SitRepNames[0]="ProjectMiranda")
 
 ; Special sit reps that are given priority over normal sit reps due to their rarity
-+SPECIAL_SIT_REPS=(SitRepName="ViperKing", Chance=0.5, Priority=50)
-+SPECIAL_SIT_REPS=(SitRepName="BerserkerQueen", Chance=0.5, Priority=55)
-+SPECIAL_SIT_REPS=(SitRepName="ArchonKing", Chance=0.5, Priority=60)
++SPECIAL_SIT_REPS=(SitRepName="ViperKing", Chance=0.6, Priority=50)
++SPECIAL_SIT_REPS=(SitRepName="BerserkerQueen", Chance=0.6, Priority=55)
++SPECIAL_SIT_REPS=(SitRepName="ArchonKing", Chance=0.6, Priority=60)
 +SPECIAL_SIT_REPS=(SitRepName="LargeDepot_LW", Chance=0.1, Priority=90)
 
 [LW_Overhaul.X2DownloadableContentInfo_LongWarOfTheChosen]
@@ -2603,3 +2603,9 @@ MULTI_LINE_INFIL = true
 
 [LW_Overhaul.UISquadContainer]
 bLeftSquadButton = false
+
+[LW_Overhaul.LWDLCHelpers]
+
++AlienRulerTags = "Ruler_ViperKingActive"
++AlienRulerTags = "Ruler_BerserkerQueenActive"
++AlienRulerTags = "Ruler_ArchonKingActive"
