--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -132,6 +132,7 @@ RunPriorityGroup=RUN_LAST
 
 [LongWarOfTheChosen CHModDependency]
 DisplayName="Long War of the Chosen"
+RequiredHighlanderVersion = (MajorVersion = 1, MinorVersion = 29, PatchVersion = 0)
 
 +IncompatibleMods="RevivalProtocolFixes"
 +IncompatibleMods="WOTC_PistolSlot"
