move coil shred to a passive effect on Shredder and not a hidden ability
easier for compatibility

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1162,6 +1162,9 @@ HIGH_COVER_AIM_MOD=30
 ;+AllowedAbilities=PrimaryReturnFireShot
 +AllowedAbilities=PistolReturnFireShot
 
+[LW_Overhaul.X2Effect_PassiveShredder_LW]
++ShredderPerWeaponTech=(WeaponTech = "coilgun_lw", Shred = 2)
++ShredderPerWeaponTech=(WeaponTech = "laser_lw", Shred = 1)
 
 [LW_WeaponsAndArmor.X2Ability_ThrowingKnifeAbilitySet]
 KNIFE_JUGGLER_EXTRA_AMMO=1
