Update Avenger Defense RNF pods to proper encounterlists

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -1972,6 +1972,33 @@
 					 EncounterLeaderSpawnList="Open", \\
 					 EncounterFollowerSpawnList="Open")
 
++ConfigurableEncounters=(EncounterID="AvengerDefense_RNFEasy_LW", \\
+						 MaxSpawnCount=2, \\
+						 OffsetForceLevel=0, \\
+						 OffsetAlertLevel=0, \\
+						 EncounterLeaderSpawnList="DefaultLeaders_LW", \\
+						 EncounterFollowerSpawnList="AdventRNFCandidates_LW", \\
+						 ReinforcementCountdown=1, \\
+						 bGroupDoesNotAwardLoot=true)
+
++ConfigurableEncounters=(EncounterID="AvengerDefense_RNFMedium_LW", \\
+						 MaxSpawnCount=3, \\
+						 OffsetForceLevel=0, \\
+						 OffsetAlertLevel=0, \\
+						 EncounterLeaderSpawnList="DefaultLeaders_LW", \\
+						 EncounterFollowerSpawnList="AdventRNFCandidates_LW", \\
+						 ReinforcementCountdown=1, \\
+						 bGroupDoesNotAwardLoot=true)
+
++ConfigurableEncounters=(EncounterID="AvengerDefense_RNFHard_LW", \\
+						 MaxSpawnCount=4, \\
+						 OffsetForceLevel=0, \\
+						 OffsetAlertLevel=0, \\
+						 EncounterLeaderSpawnList="DefaultLeaders_LW", \\
+						 EncounterFollowerSpawnList="AdventRNFCandidates_LW", \\
+						 ReinforcementCountdown=1, \\
+						 bGroupDoesNotAwardLoot=true)
+
 ;----------------------------------------------------------------
 ; REINFORCEMENT MISSION ENCOUNTERS
 ;----------------------------------------------------------------
