Chain Lightning/Chaining Jolt to 5 tiles
4 was a bit overnerfed and caused issues when units were larger than 1 tile such as gatekeepers/sectopods

--- a/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
@@ -202,8 +202,14 @@ VOIDCONDUIT_COOLDOWN=3
 
 
 [XComGame.X2AbilityMultiTarget_Volt]
-;DistanceBetweenTargets=230400.0f			; unreal units squared
-DistanceBetweenTargets=147456.0f			
+; This affects Chain Lightning and Chaining Jolt. Unit is unreal units squared
+; (tiles * 96)^2
+
+; 5 tiles + 1 unit
+DistanceBetweenTargets=230401.0f
+
+; 4 tiles
+;DistanceBetweenTargets=147456.0f			
 
 
 [XComGame.X2Ability_SkirmisherAbilitySet]
