Disable a buggy modded map from github report

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -94,6 +94,9 @@ bEnableCityHQs = true
 +MapsToDisable=Plot_WLD_Advent_MdObj_Voz_1C
 +MapsToDisable=Plot_CTY_MdObj_Canal_Voz_1C
 
+; Spawns with broken evac zones per github issue #1262
++MapsToDisable=Plot_ABN_GOps_Skyranger
+
 ; Add encounter names here to exclude from the LW diversity system:
 
 +EncountersToExclude=MOCXDummiesX4
