Refactor Lost Towers mission handling
move from hardcoded list to config array, add the new spark armors to it.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1765,6 +1765,21 @@ AutopsyAdventPsiWitchIntelCost=0
 +ENEMY_FLASHBANG_RESIST=(UnitName=BerserkerQueen, Chance=100)
 +ENEMY_FLASHBANG_RESIST=(UnitName=ArchonKing,Chance=100)
 
+; SLG DLC Handling for Alt Reqs for the Lost Tower mission.
+; For items here, make sure MechanizedWarfare is in RequiredTech2 in the ItemTable stuff
+; and you can add additional tech (e.g. ExoSuit) in RequiredTech1
+
++SparkRelatedItems=SparkRifle_MG
++SparkRelatedItems=SparkRifle_BM
++SparkRelatedItems=PlatedSparkArmor
++SparkRelatedItems=PoweredSparkArmor
++SparkRelatedItems=PlatedSparkHeavyArmor_LW
++SparkRelatedItems=PlatedSparkLightArmor_LW
++SparkRelatedItems=PoweredSparkHeavyArmor_LW
++SparkRelatedItems=PoweredSparkLightArmor_LW
++SparkRelatedItems=SparkBit_MG
++SparkRelatedItems=SparkBit_BM
+
 [LW_Overhaul.X2Ability_SitRepGrantedAbilitySet_LW]
 LETHARGY_AIM_PENALTY=-20
 LETHARGY_MOBILITY_PENALTY=-2
