whitespace cleanup + comment

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2439,6 +2439,7 @@ FACTION_ABILITY_COSTS[7]=30
 ; Cost multiplier for the first purchased class ability
 BASE_ABILITY_COST_MODIFIER=0.2
 
+; BELOW IS NOT USED RIGHT NOW, it is unreliable
 ; Minimum HP percent a SPARK needs to be at to go on a mission.
 fSPARK_HP_MIN = 0.5f
 
