--- a/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
+++ b/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
@@ -119,11 +119,11 @@ REPAIR_SERVOS_DURATION = 2
 ;-----------------------------------------------------------
 
 [LW_AlienPack_Integrated.X2Effect_ReadyForAnything]
-RFA_VALID_ABILITIES[0]="StandardShot"
-RFA_VALID_ABILITIES[1]="SniperStandardFire"
-RFA_VALID_ABILITIES[2]="LightEmUp"   
-RFA_VALID_ABILITIES[3]="HunterRifleShot"
-RFA_VALID_ABILITIES[4]="PistolStandardShot"   
++RFA_VALID_ABILITIES="StandardShot"
++RFA_VALID_ABILITIES="SniperStandardFire"
++RFA_VALID_ABILITIES="LightEmUp"   
++RFA_VALID_ABILITIES="HunterRifleShot"
++RFA_VALID_ABILITIES="PistolStandardShot"   
 
 [LW_AlienPack_Integrated.UIScreenListener_Shell_LWAlienPack]
 
