Handle StandardShot_NoEnd for abilities that check for Standard Shot
some modded weapons use this one instead.

--- a/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
+++ b/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
@@ -121,9 +121,12 @@ REPAIR_SERVOS_DURATION = 2
 [LW_AlienPack_Integrated.X2Effect_ReadyForAnything]
 +RFA_VALID_ABILITIES="StandardShot"
 +RFA_VALID_ABILITIES="SniperStandardFire"
-+RFA_VALID_ABILITIES="LightEmUp"   
++RFA_VALID_ABILITIES="LightEmUp"
 +RFA_VALID_ABILITIES="HunterRifleShot"
-+RFA_VALID_ABILITIES="PistolStandardShot"   
++RFA_VALID_ABILITIES="PistolStandardShot"
+
+; The effect checks that the unit is out of AP, so this ability being used as the last action should trigger RFA.
++RFA_VALID_ABILITIES="StandardShot_NoEnd"
 
 [LW_AlienPack_Integrated.UIScreenListener_Shell_LWAlienPack]
 
