--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -554,6 +554,7 @@ MACROPHAGES_HEAL_AMT = 1
 CE_MAX_TILES=4
 CE_USES_PER_TURN=1
 +CE_ABILITYNAMES=StandardShot
++CE_ABILITYNAMES=StandardShot_NoEnd
 +CE_ABILITYNAMES=SniperStandardFire
 +CE_ABILITYNAMES=SnapShot
 +CE_ABILITYNAMES=LightEmUp
@@ -717,6 +718,7 @@ ANATOMY_ARMOR_PIERCE = 2
 
 [LW_PerkPack_Integrated.X2Effect_HitandRun]
 +HNR_ABILITYNAMES=StandardShot
++HNR_ABILITYNAMES=StandardShot_NoEnd
 +HNR_ABILITYNAMES=LightEmUp
 +HNR_ABILITYNAMES=SniperStandardFire
 +HNR_ABILITYNAMES=SnapShot
