Fix Typo in XComLW_Toolbox.ini
RedFogForAlliens to RedFogForAliens

--- a/LongWarOfTheChosen/Config/XComLW_Toolbox.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Toolbox.ini
@@ -27,7 +27,7 @@ UIDisplayCam_Front="PreM_UIDisplayCam_SquadSelect_VeryLow"
 +SUPPRESS=TBTrace
 
 RedFogForXCom=false
-RedFogForAlliens=false
+RedFogForAliens=false
 RedFogLinear=false
 
 HEALTH_RECOVERED_FOR_RESCUED_SOLDIER=0.8f
