Fix Typo in XComLW_FactionBalance.ini
Skrimisher to Skirmisher (only a comment, not important)

--- a/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
+++ b/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
@@ -59,7 +59,7 @@ AMPLIFY_SHOTS = 3
 
 [LW_FactionBalance.X2AbilityCooldown_Grapple]
 GRAPPLE_COOLDOWN=3 ; Base cooldown of the Skirmisher's grapple
-PARKOUR_COOLDOWN_REDUCTION=1 ; Turns of cooldown that are subtracted if the Skrimisher has Parkour
+PARKOUR_COOLDOWN_REDUCTION=1 ; Turns of cooldown that are subtracted if the Skirmisher has Parkour
 
 ; NOTE: changing the above does NOT change the game's text,
 ; so the GTS perk will still say that it only reduces the cooldown by 1,
