Add config to the brute force heal checking.
this stuff breaks Augmentations, so let people turn it on/off

--- a/LongWarOfTheChosen/Config/XComLW_InfiltrationSettings.ini
+++ b/LongWarOfTheChosen/Config/XComLW_InfiltrationSettings.ini
@@ -338,3 +338,6 @@ LEADERSHIP_COVERTNESS_PER_MISSION=0.0075f
 LEADERSHIP_COVERTNESS_CAP=0.25f
 
 SUPPRESSOR_INFILTRATION_EMPOWER_BONUS=0.225f
+
+; setting this off for now, turn back on if heal projects cause issues again
+bEnableForcedHealProjectChecking = false
