--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -581,35 +581,77 @@ ShouldCleanupObsoleteUnits=true
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T1", Health=80, Difficulty=2)
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T1", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T2", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T2", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T2", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T2", Health=100, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T3", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T3", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T3", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T3", Health=100, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T1_Invuln", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T4", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T4", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T4", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T4", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T5", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T5", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T5", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T5", Health=100, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T6", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T6", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T6", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T6", Health=100, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3", Health=100, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T7", Health=60, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T7", Health=80, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T7", Health=80, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T7", Health=100, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T2_Invuln", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T3_Invuln", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T4_Invuln", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T5_Invuln", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T6_Invuln", Health=100, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7_Invuln", Health=60, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7_Invuln", Health=80, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7_Invuln", Health=80, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_ChosenShowdown.Toughness.Toughness_ChosenSarcophagus_T7_Invuln", Health=100, Difficulty=3)
+
 
 ; This is the HP of the objective when XCOM is defending a device
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.ProtectDevice.Toughness_DataInterceptor_T1", Health=27, Difficulty=0) 
