Exclude more weapons from showing aim stat buff on soldier UI

--- a/LongWarOfTheChosen/Config/XComUI.ini
+++ b/LongWarOfTheChosen/Config/XComUI.ini
@@ -3,7 +3,10 @@
 +EquipmentExcludedFromStatBoosts="ArcThrower_MG"
 +EquipmentExcludedFromStatBoosts="ArcThrower_BM"
 +EquipmentExcludedFromStatBoosts="CombatKnife_CV"
++EquipmentExcludedFromStatBoosts="CombatKnife_LS"
 +EquipmentExcludedFromStatBoosts="CombatKnife_MG"
++EquipmentExcludedFromStatBoosts="CombatKnife_CG"
++EquipmentExcludedFromStatBoosts="CombatKnife_BM"
 +EquipmentExcludedFromStatBoosts="CasterGauntlet_CV"
 +EquipmentExcludedFromStatBoosts="CasterGauntlet_MG"
 +EquipmentExcludedFromStatBoosts="CasterGauntlet_BM"
@@ -16,6 +19,14 @@
 +EquipmentExcludedFromStatBoosts="TemplarBallisticShield_CV"
 +EquipmentExcludedFromStatBoosts="TemplarBallisticShield_MG"
 +EquipmentExcludedFromStatBoosts="TemplarBallisticShield_BM"
++EquipmentExcludedFromStatBoosts="Cannon_CV"
++EquipmentExcludedFromStatBoosts="Cannon_LS"
++EquipmentExcludedFromStatBoosts="Cannon_MG"
++EquipmentExcludedFromStatBoosts="Cannon_CG"
++EquipmentExcludedFromStatBoosts="Cannon_BM"
++EquipmentExcludedFromStatBoosts="TLE_Sword_CV"
++EquipmentExcludedFromStatBoosts="TLE_Sword_MG"
++EquipmentExcludedFromStatBoosts="TLE_Sword_BM"
 
 [XComGame.UIMissionSummary]
 +m_CivilianRescueMissionFamilies="Terror"
