Update Iron Skin
now provides 67% reduction against Assassin.
Properly checks weapon damage type now too.  Previously, the giant block of If statements returned true for shots, but was only stopped from applying to shots by the bMeleeDamage check.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -513,6 +513,7 @@ BODY_SHIELD_ENEMY_CRIT_MALUS=50
 BODY_SHIELD_COOLDOWN=2
 BODY_SHIELD_DURATION=1
 IRON_SKIN_MELEE_DAMAGE_REDUCTION=3
+IRON_SKIN_ASSASSIN_MOD=0.67
 MIND_MERGE_MIN_ACTION_POINTS=1
 MIND_MERGE_DURATION=2					; This is number of "half-turns"
 MIND_MERGE_COOLDOWN=4
