--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2527,6 +2527,11 @@ fSPARK_HP_MIN = 0.5f
 
 +OverrideMissionEnemyCountOffsets=(MissionName="CompoundRescueOperative_LW", OffsetAmount = 2)
 
+; uncomment the below to disable the kill XP cap
+; if you want to exploit infinite RNF XP farming.
+
+; bDisableKillXPCap = true
+
 ; Controls how frequently a scampering alien will receive an extra action point when they activate on their own turn while in yellow alert. This uses the yellow action table.
 REFLEX_ACTION_CHANCE_YELLOW[0]=0.0
 REFLEX_ACTION_CHANCE_YELLOW[1]=0.20
