disable a modded map that spawns you under lampposts
from Vozati.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -90,9 +90,12 @@ bEnableCityHQs = true
 +MapsToDisable=Plot_WLD_Convoy_Ravine
 +MapsToDisable=Plot_WLD_Convoy_Stream
 
-; This one is too small, unfortunately
+; These are too small, unfortunately
 +MapsToDisable=Plot_WLD_Advent_MdObj_Voz_1C
 +MapsToDisable=Plot_CTY_MdObj_Canal_Voz_1C
+
+; This one can spawn you under the detection lampposts
++MapsToDisable=Plot_SLM_MdObj_Wash_Voz_1C
 
 ; Spawns with broken evac zones per github issue #1262
 +MapsToDisable=Plot_ABN_GOps_Skyranger
