finally fix the dupe item bug for X2Effect_TemporaryItem

--- a/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
+++ b/LongWarOfTheChosen/Config/XComLW_FactionBalance.ini
@@ -30,7 +30,7 @@ BATTLEFIELD_AWARENESS_COOLDOWN=3
 
 [LW_FactionBalance.X2Effect_PackMaster_LW]
 PACKMASTER_KIT_BONUS=1
-+EXCLUDED_GRENADE_TYPES="GhostGrenade"
++EXCLUDED_GRENADE_TYPES="GhostGrenade_LW"
 
 [LW_FactionBalance.X2DownloadableContentInfo_LW_FactionBalance]
 REAPER_DETECTION_RANGE_REDUCTION=0.25f
