--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -995,7 +995,7 @@ BASTION_DISTANCE_SQ=16		; 4 tiles squared
 [LW_PerkPack_Integrated.X2Effect_FullKit]
 FULL_KIT_BONUS=1
 +INCLUDED_WEAPON_TYPES="Battlescanner"
-+EXCLUDED_GRENADE_TYPES="GhostGrenade"
++EXCLUDED_GRENADE_TYPES="GhostGrenade_LW"
 
 [LW_PerkPack_Integrated.X2Effect_CombatAwareness]
 COMBAT_AWARENESS_BONUS_ARMOR=1
