Stop Repression from occuring and doing nothing
While it was not affecting the strat layer, it was still creating gamestates and bloating saves.  This will stop that.

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -1173,11 +1173,13 @@ MissionTree[1] =	(	MissionFamilies[0]="SecureUFO_LW", \\
 						DurationRand_Hours=96 \\
 					)
 
-
+; stop it from spawning repression activities at all and bloating saves
 [Repression X2LWAlienActivityTemplate]
 iPriority=35
 RequiredRebelMissionIncome=0.0
 DiscoveryPctChancePerDayPerHundredMissionIncome=0
+MinAlert = 999
+MinVigilance = 999
 
 MissionTree[0] =	(	Duration_Hours=336, \\
 						DurationRand_Hours=0 \\
