Fix the "pod freezes for a turn" when assigned most yellow alert jobs

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -620,8 +620,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=SD_AbilitySelector, NodeType=Selector, child[0]=SD_FirstAction, child[1]=SD_LastAction)
 +Behaviors=(BehaviorName=SD_FirstAction, NodeType=Sequence, Child[0]=NotLastActionPoint, Child[1]=SD_FirstActionSelector)
 +Behaviors=(BehaviorName=SD_LastAction, NodeType=Sequence, Child[0]=IsLastActionPoint, Child[1]=SD_LastActionSelector)
-+Behaviors=(BehaviorName=SD_FirstActionSelector, NodeType=Selector, child[0]=MoveToAlertIfNotVisible)   
-+Behaviors=(BehaviorName=SD_LastActionSelector, NodeType=Selector, Child[0]=MoveToAlertIfNotVisible) 
++Behaviors=(BehaviorName=SD_FirstActionSelector, NodeType=Selector, child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert)   
++Behaviors=(BehaviorName=SD_LastActionSelector, NodeType=Selector, Child[0]=MoveToAlertIfNotVisible, child[1]=MoveToAlert) 
 
 
 ; Replace panic responses
